--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
-certifi==2019.11.28
-Click==7.0
-Flask==1.1.1
-Flask-Cors==3.0.8
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.10.3
-joblib==0.14.0
-MarkupSafe==1.1.1
-numpy==1.17.4
-scikit-learn==0.21.3
-scipy==1.3.2
-six==1.13.0
-Werkzeug==0.16.0
 xgboost==1.3.1
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+Flask==1.1.2
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+joblib==0.15.1
+jsonify==0.5
+MarkupSafe==1.1.1
+numpy==1.19.0
+requests==2.24.0
+scikit-learn==0.23.1
+scipy==1.5.0
+sklearn==0.0
+threadpoolctl==2.1.0
+urllib3==1.25.9
+Werkzeug==1.0.1
+wincertstore==0.2
+gunicorn
